@@ -1,3 +1,10 @@
+2006-03-22  lav
+
+	* block.cc: fixed delete for rectangular blocks with multibyte chars.
+	* clipbrd.cc: fixed copy/paste for rectangular blocks with multibyte chars.
+	* mb.cc, mb.h: mb_to_wc new function; define MB_CUR_MAX when unavailable.
+	* user.cc: fixed text optimization.
+
 2005-07-18  lav
 
 	* keymapdf.cc: added shift-begin/end key codes (for linux console hack);
